--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-player": "^2.10.0",
+    "react-spring-lightbox": "^1.7.1",
     "styled-components": "^5.3.3"
   }
 }
