--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-styled-components": "^2.0.2",
     "cloudinary-build-url": "^0.2.4",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-facebook-pixel": "^1.0.8",
     "gatsby-plugin-google-analytics": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
