--- a/package.json
+++ b/package.json
@@ -15,24 +15,25 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@cloudinary/react": "^1.1.0",
-    "@cloudinary/url-gen": "^1.6.0",
-    "babel-plugin-styled-components": "^2.0.2",
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.21.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "cloudinary-build-url": "^0.2.4",
-    "gatsby": "^4.4.0",
+    "gatsby": "^5.13.7",
     "gatsby-plugin-facebook-pixel": "^1.0.8",
-    "gatsby-plugin-google-analytics": "^4.4.0",
-      "gatsby-plugin-image": "^2.4.0",
-    "gatsby-plugin-react-helmet": "^5.4.0",
-    "gatsby-plugin-sharp": "^4.4.0",
-    "gatsby-plugin-styled-components": "^5.4.0",
-    "gatsby-source-filesystem": "^4.4.0",
-    "gatsby-transformer-sharp": "^4.4.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "gatsby-plugin-google-analytics": "^5.13.1",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-react-helmet": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-styled-components": "^6.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
+    "react": "^18.3.1",
+    "react-dom": "^18",
     "react-helmet": "^6.1.0",
-    "react-player": "^2.10.0",
-    "react-spring-lightbox": "^1.7.1",
-    "styled-components": "^5.3.3"
-  }
+    "react-player": "^2.16.0",
+    "react-spring-lightbox": "^1.8.0",
+    "styled-components": "^6.1.13"
+  },
+  "packageManager": "yarn@4.1.1+sha512.ec40d0639bb307441b945d9467139cbb88d14394baac760b52eca038b330d16542d66fef61574271534ace5a200518dabf3b53a85f1f9e4bfa37141b538a9590"
 }
