--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "keywords": [
     "gatsby"
   ],
+  "resolutions": {
+    "yarn": "1.22.10"
+  },
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
@@ -35,5 +38,5 @@
     "react-spring-lightbox": "^1.8.0",
     "styled-components": "^6.1.13"
   },
-  "packageManager": "yarn@4.1.1+sha512.ec40d0639bb307441b945d9467139cbb88d14394baac760b52eca038b330d16542d66fef61574271534ace5a200518dabf3b53a85f1f9e4bfa37141b538a9590"
+  "packageManager": "yarn@1.22.10+sha512.21a9d0188f5144f00df3b5464c5ef3b36bb1912c904ab48fb23bb408e81bb0a40e397af92ed7153dec975a0c156b4cb01b777c760ea449828606e60ad36d6a78"
 }
