--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "babel-plugin-styled-components": "^2.1.4",
     "cloudinary-build-url": "^0.2.4",
+    "firebase": "^11.0.2",
     "gatsby": "^5.13.7",
     "gatsby-plugin-facebook-pixel": "^1.0.8",
     "gatsby-plugin-google-analytics": "^5.13.1",
