--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "styled-components": "^6.1.13",
     "yet-another-react-lightbox": "^3.21.6"
   },
-  "packageManager": "yarn@1.22.10+sha512.21a9d0188f5144f00df3b5464c5ef3b36bb1912c904ab48fb23bb408e81bb0a40e397af92ed7153dec975a0c156b4cb01b777c760ea449828606e60ad36d6a78"
+  "packageManager": "yarn@1.22.10+sha512.21a9d0188f5144f00df3b5464c5ef3b36bb1912c904ab48fb23bb408e81bb0a40e397af92ed7153dec975a0c156b4cb01b777c760ea449828606e60ad36d6a78",
+  "devDependencies": {
+    "gatsby-plugin-netlify": "^5.1.1",
+    "install": "^0.13.0"
+  }
 }
